# zimmers

./: README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  vite.config.ts
extensions/: .gitignore  README.md  build.ts  bun.lockb  globals.d.ts  package.json  tsconfig.json  types.d.ts
extensions/lookup-providers/: lingva.tsx  tatoeba.ts  yandex.tsx
extensions/lookup-providers/lingva/: index.tsx
extensions/lookup-providers/yandex/: index.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  main.rs
src-tauri/src/handlers/: anki.rs  lemmatize.rs  lemmatizer.py  mod.rs
src/components/: extensions.tsx  flashcard-preview.tsx
src/components/asb-playground/: index.tsx
src/components/lookup-results/: index.tsx
src/components/settings/: index.tsx
src/components/sidebar/: index.tsx
src/lib/: anki-connect.ts  flash-card.tsx  initializer.tsx  lookup.ts  navigation.tsx  settings.ts  store.ts  utils.ts
src/lib/extension-manager/: index.ts  use-extensions.ts
tests/: anki-test.ts  extension.ts  lv.js  yx.js
